--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <section id="shows" class="py-5">
         <div class="container">
             <h2 class="text-white text-center py-4">Shows</h2>
-            <div class="row justify-content-center">
+            <div class="row">
                 <!-- Show 1 -->
-                <div class="show col-md-4 p-4">
+                <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
                             <img src="images/derekshow.webp" class="card-img-top" alt="pat in studio">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <!-- Show 2 -->
-                <div class="show col-md-4 p-4">
+                <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
                             <img src="images/normashow.webp" class="card-img-top" alt="pat in studio">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <!-- Show 3 -->
-                <div class="show col-md-4 p-4">
+                <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
                             <img src="images/garyshow.webp" class="card-img-top" alt="pat in studio">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <!-- Show 4 -->
-                <div class="show col-md-4 p-4">
+                <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
                             <img src="images/edshow.webp" class="card-img-top" alt="pat in studio">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <!-- Show 5 -->
-                <div class="show col-md-4 p-4">
+                <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
                             <img src="images/gershow.webp" class="card-img-top" alt="pat in studio">
@@ -147,12 +147,12 @@
                     </div>
                 </div>
                 <!-- Show 6 -->
-                <div class="show col-md-4 p-4">
+                <div class="show col-md-4 py-4">
                     <div class="card mb-4">
                         <div class="card-img-container position-relative">
                             <img src="images/johnmacshow.webp" class="card-img-top" alt="pat in studio">
                             <div class="card-overlay">
-                                <div>text....</div>
+                                <div>John Mac remembers Live Aid, The Bay City, and the night Def Leppard played in Ballybunion</div>
                             </div>
                         </div>
                         <div class="audio-visualizer">
